--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,19 +4,20 @@
   -webkit-transition: 0.5s;
   transition: 0.5s;
   max-height: 0;
-  padding: 0 !important;
+  padding: 0;
 }
 .order-enter.order-enter-active {
-  max-height: 60px;
   -webkit-transform: translateX(0);
           transform: translateX(0);
-  padding: 2rem 0 !important;
+  max-height: 60px;
+  transform: translateX(0);
+  padding: 2rem 0;
 }
 .order-exit {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
   -webkit-transform: translateX(0);
           transform: translateX(0);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .order-exit.order-exit-active {
   -webkit-transform: translateX(120%);
@@ -24,19 +25,16 @@
   padding: 0;
 }
 .count-enter {
-  background: #f00;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .count-enter.count-enter-active {
-  background: #ff0;
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
 .count-exit {
-  background: #000;
   -webkit-transform: translateY(0);
           transform: translateY(0);
   -webkit-transition: 0.5s;
@@ -46,9 +44,8 @@
   bottom: 0;
 }
 .count-exit.count-exit-active {
-  background: #008000;
-  -webkit-transform: translateY(-100%) scale(3);
-          transform: translateY(-100%) scale(3);
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
 @font-face {
   font-family: "haymakerregular";
@@ -520,7 +517,7 @@ input[type=submit] {
   border: 1px solid #000;
   font-weight: 600;
   font-size: 1.5rem;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   position: relative;
